# lockpick

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cog.toml
.githooks/: pre-commit
.github/: check-coverage.sh  check-license-headers.sh  license_header.rs
.github/prompts/: pr-builder.md
.github/workflows/: license-check.yml  release-artifacts.yml  release-plz.yml  rust.yml
scripts/: check-license-headers.sh
src/: cli.rs  config.rs  error.rs  fix.rs  logger.rs  main.rs  reporter.rs  runner.rs  signals.rs  tooling.rs
src/checks/: audit.rs  clippy.rs  compile.rs  coverage.rs  doc.rs  doctest.rs  fmt.rs  license_header.rs  machete.rs  mod.rs  plan.rs  runner.rs  test.rs  util.rs
tests/: cli_contract.rs  config_metadata.rs  exit_codes.rs  integration.rs  side_effects.rs
tests/common/: mod.rs
