[package]
name = "lockpick"
version = "0.5.0"
edition = "2024"
description = "Rust CLI to enforce merge checks and code quality"
repository = "https://github.com/Kuenlun/lockpick"
authors = ["Juan Luis Leal Contreras <kuenlunleal@gmail.com>"]
license = "MIT OR Apache-2.0"

# Dogfooded configuration consumed by lockpick when it runs against
# itself. We hold ourselves to the same default that ships to consumer
# projects: 100% on every metric. Subprocess paths (cargo audit /
# machete) are covered by trait-based fakes, and the coverage flow is
# covered end-to-end by integration tests against a `cargo-llvm-cov`
# shim that avoids nested instrumentation.
[package.metadata.lockpick]
license-header = ".github/license_header.rs"

[package.metadata.lockpick.coverage]
functions = 100
lines = 100
regions = 100
branches = 100

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
glob = "0.3"
indicatif = "0.18.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.2.0"
assert_fs = "1.1.3"
indoc = "2.0.7"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
debug = false
