[package]
name = "lockpick"
version = "0.6.0"
edition = "2024"
description = "Rust CLI to enforce merge checks and code quality"
repository = "https://github.com/Kuenlun/lockpick"
authors = ["Juan Luis Leal Contreras <kuenlunleal@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["cli", "ci", "quality", "lint", "merge-check"]
categories = ["development-tools", "command-line-utilities"]

# Self-hosted lockpick configuration. Same 100% default that ships to
# consumer projects.
[package.metadata.lockpick]
license-header = ".github/license_header.rs"

[package.metadata.lockpick.coverage]
functions = 0
lines = 0
regions = 0
branches = 0

[dependencies]
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap_complete = "4.6"
colored = "3.1.1"
glob = "0.3.3"
indicatif = "0.18.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

# Unix-only: SIGINT/SIGTERM capture so a Ctrl-C (or `kill -INT`) mid-pipeline
# yields the canonical `128 + signum` exit code instead of being misread as
# a check failure. Children get the same signal forwarded via `kill(1)`.
[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.3.18", default-features = false, features = ["iterator"] }

[dev-dependencies]
assert_cmd = "2.2.2"
assert_fs = "1.1.3"
indoc = "2.0.7"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
debug = false
