[package]
name = "lockpick"
version = "0.6.0"
edition = "2024"
description = "Run every Rust quality gate in one command"
repository = "https://github.com/Kuenlun/lockpick"
authors = ["Juan Luis Leal Contreras <kuenlunleal@gmail.com>"]
license = "MIT OR Apache-2.0"
keywords = ["cli", "ci", "quality", "lint", "merge-check"]
categories = ["development-tools", "command-line-utilities"]

# Self-hosted lockpick configuration.
[package.metadata.lockpick]
license-header = ".github/license_header.rs"
skip = ["coverage"]

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
clap-cargo = { version = "0.18", default-features = false, features = ["clap"] }
clap_complete = "4"
colored = "3"
glob = "0.3"
indicatif = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Unix-only: SIGINT/SIGTERM capture so a Ctrl-C (or `kill -INT`) mid-pipeline
# yields the canonical `128 + signum` exit code instead of being misread as
# a check failure. Children get the same signal forwarded via `kill(1)`.
[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.4", default-features = false, features = ["iterator"] }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
debug = false
